# rs-hf-serve

./: Cargo.toml  README.md
src/: main.rs  model.rs
